--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 }
 
 
-@-webkit-keyframes legs-wriggle-left {
+@keyframes legs-wriggle-left {
   0%, 100% {
     -webkit-transform: rotate(36deg) skewX(-20deg);
     transform: rotate(36deg) skewX(-20deg);
@@ -168,7 +168,7 @@
     transform: rotate(45deg) skewX(-20deg);
   }
 }
-@-webkit-keyframes legs-wriggle-right {
+@keyframes legs-wriggle-right {
   0%, 100% {
     -webkit-transform: rotate(-36deg) skewX(20deg);
     transform: rotate(-36deg) skewX(20deg);
