--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background: url('https://xatimg.com/image/3JaMe4znDBiA.jpg')/*Wallpaper*/ center/cover fixed, #000
+  background: url('https://xatimg.com/image/6lhIUzRPF7Gz.png')/*Wallpaper*/ center/cover fixed, #000
 }
 
 .container {
