--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@ body {
   background: url('https://xatimg.com/image/6lhIUzRPF7Gz.png')/*Wallpaper*/ center/cover fixed, #000
 }
 	
+.container {
+  position: absolute;
+  top: 35vh;
+  left: 5vh;
+}	
+	
 @keyframes flicker {
   0%    { opacity: 1; }
   4%    { opacity: 0.1; }
