--- a/index.html
+++ b/index.html
@@ -2,8 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Engagement&family=Oswald:wght@200&family=Rammetto+One&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="hallo.css">
 <title>MMiguell2022 - xatframe</title>
-<body>
+</head>	
+<head>
+	<div class='spider_4'>
+		<div class="jd__sun"></div>
+		<div class='eye left'></div>
+		<div class='eye right'></div>
+		<span class='leg left'></span>
+		<span class='leg left'></span>
+		<span class='leg left'></span>
+		<span class='leg left'></span>
+		<span class='leg right'></span>
+		<span class='leg right'></span>
+		<span class='leg right'></span>
+		<span class='leg right'></span>
+	</div>
+<!-- nuvem -->
+	<body>	
+	<div class="jd__scene">
+		<img class="jd__cloud1" src="https://i.postimg.cc/KzBw7tz8/cloud1.png">
+		<img class="jd__cloud2" src="https://i.postimg.cc/0jv3VrMd/cloud2.png">
+		<img class="jd__cloud3" src="https://i.postimg.cc/VN32bKzh/cloud3.png">
+		<img class="jd__cloud4" src="https://i.postimg.cc/0jv3VrMd/cloud2.png">
+		<img class="jd__cloud5" src="https://i.postimg.cc/VN32bKzh/cloud3.png">
+		<img class="jd__cloud6" src="https://i.postimg.cc/KzBw7tz8/cloud1.png">
+	</div>
+</body>
 <style>
  [class*="spider"] {
   position: absolute;
@@ -245,19 +273,6 @@ body {
   
 </style>
 </head>
-
-<div class='spider_4'>
-  <div class='eye left'></div>
-  <div class='eye right'></div>
-  <span class='leg left'></span>
-  <span class='leg left'></span>
-  <span class='leg left'></span>
-  <span class='leg left'></span>
-  <span class='leg right'></span>
-  <span class='leg right'></span>
-  <span class='leg right'></span>
-  <span class='leg right'></span>
-</div>
 
 </body>
 </html>
